deploy/kustomize/overlays/cognitive-hive/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organigram
  namespace: organigram
spec:
  template:
    spec:
      containers:
        - name: organigram
